[package]

name = "r_tetris"
version = "0.0.1"
authors = ["Zachary <zmoshansky@gmail.com>"]

[[bin]]

name = "r_tetris"
path = "src/main.rs"

[dependencies.graphics]
git = "https://github.com/pistondevelopers/rust-graphics"

[dependencies.sdl2_window]
git = "https://github.com/pistondevelopers/sdl2_window"

[dependencies.event]
git = "https://github.com/pistondevelopers/event"

[dependencies.piston]
git = "https://github.com/pistondevelopers/piston"

#[dependencies.glfw_window]
#git = "https://github.com/PistonDevelopers/glfw_window"
